# agentledger/services/api/src/roi-templates/roi-templates.module.ts
@@ -1,0 +1,5 @@
+import { Module } from '@nestjs/common';
+import { RoiTemplatesController } from './roi-templates.controller';
+
+@Module({ controllers: [RoiTemplatesController] })
+export class RoiTemplatesModule {}
